fixed autoresize and alignment of imageplot

--- a/src/app/widgets/header/header.component.scss
+++ b/src/app/widgets/header/header.component.scss
@@ -2,7 +2,6 @@
 
 .toolbar {
   position: relative;
-  z-index: 1;
   flex-grow: 0;
   flex-shrink: 0;
 }
