--- a/src/app/widgets/image-plot/image-plot.component.css
+++ b/src/app/widgets/image-plot/image-plot.component.css
@@ -4,12 +4,17 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 #graph {
-  display: block;
+  display: flex;
   position: absolute;
+  z-index: 2;
   height: 100%;
   width: 100%;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 
 }
