--- a/src/app/widgets/splitter/horizontal-splitter/horizontal-splitter.component.css
+++ b/src/app/widgets/splitter/horizontal-splitter/horizontal-splitter.component.css
@@ -28,5 +28,4 @@
   height: 7px;
   cursor: row-resize;
   user-select: none;
-  z-index: 3;
 }
