--- a/src/app/widgets/splitter/vertical-splitter/vertical-splitter.component.css
+++ b/src/app/widgets/splitter/vertical-splitter/vertical-splitter.component.css
@@ -28,5 +28,4 @@
   width: 6px;
   cursor: col-resize;
   user-select: none;
-  z-index: 3;
 }
